<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/ediText1"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="444dp"
        android:backgroundTint="@android:color/transparent"
        android:gravity="center"
        android:inputType="text"
        android:autofillHints="text"
        android:hint="@string/Mi_nuevo_proyecto"
        android:padding="16dp"
        android:contentDescription="@string/mi_app"
        app:layout_constraintBottom_toTopOf="@+id/compareButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/ediText2"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="208dp"
        android:backgroundTint="@android:color/transparent"
        android:gravity="center"
        android:inputType="text"
        android:autofillHints="text"
        android:contentDescription="@string/mi_nueva_aplicacion"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/compareButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/compareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="44dp"
        android:text="@string/comparar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="170dp"
        tools:layout_editor_absoluteY="546dp"
        android:textSize="70sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>